Fix issue where scrollbars appear in Firefox

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  overflow: hidden; /* prevents scrollbars from appearing in Firefox */
 }
 
 #highlight {
